--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <title>PIXI quickstarter</title>
-    <link href="//db.onlinewebfonts.com/c/da1a9fbcd9ded63df072427001b24e21?family=04b_03" rel="stylesheet" type="text/css"/>
+    <link rel="stylesheet" type="text/css" href="assets/fonts/04b03/style.css">
     <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body class="test">
