--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
-    <title>PIXI quickstarter</title>
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="format-detection" content="telephone=no">
+    <title>Slot!</title>
     <link rel="stylesheet" type="text/css" href="assets/fonts/04b03/style.css">
     <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body class="test">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/vConsole/3.4.0/vconsole.min.js"></script>
+<script>
+  var vConsole = new VConsole();
+  console.log('Hello world');
+</script>
 <script src="main.ts"></script>
 </body>
 </html>
